[tool.poetry]
name = "dydx-v3-python"
version = "1.6.2"
description = ""
authors = ["Derek  <derekho4.20@gmail.com>"]
license = "Apache-2.0 license"

[tool.poetry.dependencies]
python = "^3.10"
dateparser = "^1.1.1"
ecdsa = "^0.18.0"
eth-keys = "^0.4.0"
eth-account = "^0.6.1"
mpmath = "^1.2.1"
pytest = "^7.1.2"
requests-mock = "^1.9.3"
requests = "^2.28.1"
setuptools = "^63.4.2"
six = "^1.16.0"
sympy = "^1.10.1"
tox = "^3.25.1"
web3 = "^5.30.0"
importlib-metadata = "^4.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
